--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ yarn-error.log*
 .env
 .env.local
 .env.*.local
+*.env
+*.env.example
+*.env.local
+*.env.staging
 
 # Local Netlify folder
 .netlify
